# takuzu

./: .clang-format  4x4_90.txt  6x6_empty.txt  CMakeLists.txt  README.md  SDL2.cmake  default.txt  game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_random.c  game_random.h  game_sdl.c  game_sdl.h  game_solve.c  game_struct.h  game_test_argomes.c  game_test_juruch.c  game_test_ymaabout.c  game_text.c  game_tools.c  game_tools.h  main.c  queue.c  queue.h
web/: demo.js  game.html  game.js  game.wasm  math.js  math.wasm  mystyle.css  wrapper.c
web/src/: game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_solve.c  game_solve.h  game_struct.h  game_tools.c  game_tools.h  queue.c  queue.h
