cmake_minimum_required(VERSION 2.8.12)
enable_testing()
project(game_text C)
include(CTest)

set(CMAKE_C_FLAGS "-std=c99 -g -Wall ")

link_directories(${CMAKE_SOURCE_DIR})
include(SDL2.cmake)
message(STATUS "SDL2 include dir: ${SDL2_ALL_INC}")
message(STATUS "SDL2 all libraries: ${SDL2_ALL_LIBS}")
file(COPY resources DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

include_directories(${SDL2_ALL_INC})
add_executable(game_text game_text.c )
add_executable(game_solve game_solve.c )
add_executable(game_test_ymaabout game_test_ymaabout.c)
add_executable(game_test_juruch game_test_juruch.c)
add_executable(game_test_argomes game_test_argomes.c)
add_executable(game_sdl main.c game_sdl.c)
target_link_libraries(game_sdl ${SDL2_ALL_LIBS} m)
set(SDL2_ALL_INC ${SDL2_INCLUDE_DIR})
set(SDL2_ALL_LIBS ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2_TTF_LIBRARY})
add_library(game game.c game_aux.c game_ext.c queue.c game_tools.c game_random.c)
target_link_libraries(game_sdl game)
target_link_libraries(game_text game)
target_link_libraries(game_solve game)
target_link_libraries(game_test_ymaabout game)
target_link_libraries(game_test_juruch game)
target_link_libraries(game_test_argomes game)

add_test(test_ymaabout_test_dummy ./game_test_ymaabout dummy)
add_test(test_ymaabout_test_game_is_over ./game_test_ymaabout game_is_over)
add_test(test_ymaabout_test_game_restart ./game_test_ymaabout game_restart)
add_test(test_ymaabout_test_game_play_move ./game_test_ymaabout game_play_move)
add_test(test_ymaabout_test_game_check_move ./game_test_ymaabout game_check_move)
add_test(test_ymaabout_test_game_print ./game_test_ymaabout game_print)
add_test(test_ymaabout_test_game_is_wrapping ./game_test_ymaabout game_is_wrapping)
add_test(test_ymaabout_test_game_load ./game_test_ymaabout game_load)
add_test(test_ymaabout_test_game_save ./game_test_ymaabout game_save)

add_test(test_juruch_test_dummy ./game_test_juruch dummy)
add_test(test_juruch_test_game_new_empty ./game_test_juruch game_new_empty)
add_test(test_juruch_test_game_delete ./game_test_juruch game_delete)
add_test(test_juruch_test_game_set_square ./game_test_juruch game_set_square)
add_test(test_juruch_test_game_get_next_square ./game_test_juruch game_get_next_square)
add_test(test_juruch_test_game_default ./game_test_juruch game_default)
add_test(test_juruch_test_game_default_solution ./game_test_juruch game_default_solution)
add_test(test_juruch_test_game_nb_solutions ./game_test_juruch game_nb_solutions)
add_test(test_juruch_test_game_solve ./game_test_juruch game_solve)

add_test(test_argomes_test_dummy ./game_test_argomes dummy)
add_test(test_argomes_test_game_has_error ./game_test_argomes game_has_error)
add_test(test_argomes_test_game_copy ./game_test_argomes game_copy)
add_test(test_argomes_test_game_is_immutable ./game_test_argomes game_is_immutable)
add_test(test_argomes_test_game_is_empty ./game_test_argomes game_is_empty)
add_test(test_argomes_test_game_equal ./game_test_argomes game_equal)
add_test(test_argomes_test_game_get_next_number ./game_test_argomes game_get_next_number)
add_test(test_argomes_test_game_get_number ./game_test_argomes game_get_number)
add_test(test_argomes_test_game_new ./game_test_argomes game_new)
add_test(test_argomes_test_game_get_square ./game_test_argomes game_get_square)
add_test(test_argomes_test_game_new_ext ./game_test_argomes game_new_ext)
add_test(test_argomes_test_game_new_empty_ext ./game_test_argomes game_new_empty_ext)
add_test(test_argomes_test_game_nb_rows ./game_test_argomes game_nb_rows)
add_test(test_argomes_test_game_nb_cols ./game_test_argomes game_nb_cols)
add_test(test_argomes_test_game_is_unique ./game_test_argomes game_is_unique)
add_test(test_argomes_test_game_undo ./game_test_argomes game_undo)
add_test(test_argomes_test_game_redo ./game_test_argomes game_redo)



